# unsloth-cli

./: .gitignore  .markdownlint-cli2.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  culture.yaml  pyproject.toml  sonar-project.properties
.claude/: skills.local.yaml.example
.claude/skills/cicd/: SKILL.md
.claude/skills/finetune/: SKILL.md
.devague/: current_plan
.devague/frames/: unsloth-cli-runs-real-lora-qlora-fine-tuning-on-nv.json  unsloth-cli-ships-spark-friendly-lora-qlora-adapte.json
.devague/plans/: unsloth-cli-runs-real-lora-qlora-fine-tuning-on-nv.json  unsloth-cli-ships-spark-friendly-lora-qlora-adapte.json
.eidetic/memory/: unsloth-cli__public.jsonl
.github/workflows/: publish.yml  tests.yml
culture_agent_template/explain/: catalog.py
docs/: benchmarks.md  dgx-spark.md  fine-tuning.md  skill-sources.md  tested.md
docs/plans/: 2026-06-26-unsloth-cli-runs-real-lora-qlora-fine-tuning-on-nv.md  2026-06-26-unsloth-cli-ships-spark-friendly-lora-qlora-adapte.md
docs/specs/: 2026-06-26-unsloth-cli-runs-real-lora-qlora-fine-tuning-on-nv.md  2026-06-26-unsloth-cli-ships-spark-friendly-lora-qlora-adapte.md
docs/steward/: steward-suggestions.md
examples/: chat-smoke.jsonl  eval-suite.jsonl  lora-smoke.toml  qlora-smoke.toml
sloth/: __init__.py  __main__.py
sloth/cli/: __init__.py  _errors.py  _output.py
sloth/explain/: __init__.py  catalog.py
sloth/tune/: __init__.py  _trainer.py  config.py  container.py  datasets.py  metadata.py  scope.py
tests/: test_cli.py  test_cli_introspection.py  test_cmd_eval.py  test_cmd_export.py  test_cmd_train.py  test_gpu_smoke.py  test_lazy_import.py  test_packaging_import_light.py  test_tune_cli_integration.py  test_tune_config.py  test_tune_container.py  test_tune_datasets.py  test_tune_metadata.py  test_tune_scope.py  test_tune_trainer.py
(+24 files in other folders)
